force-app/main/default/objects/Registered_Account__c/Registered_Account__c.object-meta.xml
<CustomObject>
    <label>Registered Account</label>
    <nameField>
        <displayFormat>Reg Account - {0000000000}</displayFormat>
        <label>Registered Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registered Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>