force-app/main/default/objects/Registered_Account__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>