force-app/main/default/objects/Registered_Account__c/fields/Customer_PAN__c.field-meta.xml
<CustomField>
    <fullName>Customer_PAN__c</fullName>
    <formula>Customer__r.PAN_Number_of_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer PAN</label>
    <type>Text</type>
</CustomField>