force-app/main/default/objects/Registered_Account__c/fields/Parent_Record_TypeId__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_TypeId__c</fullName>
    <formula>Customer__r.RecordTypeId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Record TypeId</label>
    <type>Text</type>
</CustomField>