force-app/main/default/objects/Registered_Account__c/fields/Salesforce_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Customer_Number__c</fullName>
    <formula>Customer__r.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Customer Number</label>
    <type>Text</type>
</CustomField>