force-app/main/default/objects/Registered_Account__c/validationRules/Create_Register_Account_on_Parent_Custom.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Register_Account_on_Parent_Custom</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Customer__r.ParentId))</errorConditionFormula>
    <errorMessage>You cannot create a register account on child customer. Kindly select a parent customer.</errorMessage>
</ValidationRule>