force-app/main/default/objects/Registered_Account__c/validationRules/If_Customer_is_Domestic.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Customer_is_Domestic</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
          INCLUDES(Customer__r.BVC_Company_Type__c, &apos;Domestic&apos;),
  NOT(INCLUDES(Customer__r.BVC_Company_Type__c, &apos;International&apos;)),
  NOT(INCLUDES(Customer__r.BVC_Company_Type__c, &apos;CB Customer&apos;)), 
        NOT( ISPICKVAL( BVC_Software_Id__c   , &apos;MERCURY - A1&apos;))
      )</errorConditionFormula>
    <errorDisplayField>BVC_Software_Id__c</errorDisplayField>
    <errorMessage>For domestic customer software id should be MERCURY - A1</errorMessage>
</ValidationRule>